--- a/My_Project_dotNET/Views/Quiz/AddQuiz.cshtml
+++ b/My_Project_dotNET/Views/Quiz/AddQuiz.cshtml
@@ -78,7 +78,7 @@
                 <label asp-for="UserID" class="col-sm-3 col-form-label"><span class="text-danger">*</span>User</label>
                 <div class="col-sm">
                     <select asp-for="UserID" class="form-control" asp-items="@(new SelectList(ViewBag.UserList, "UserID", "UserName"))">
-                        <option disabled>Select User</option>
+                        <option selected disabled>Select User</option>
                     </select>
                     <span asp-validation-for="UserID" class="text-danger"></span>
                 </div>
