--- a/My_Project_dotNET/Views/Home/Index.cshtml
+++ b/My_Project_dotNET/Views/Home/Index.cshtml
@@ -135,24 +135,30 @@
                         <div class="col-sm">
                             @if (quizzes != null && quizzes.Rows.Count > 0)
                             {
-                                <table class="table table-striped">
-                                    <thead>
+                                <table class="table table-striped table-bordered table-responsive text-center align-middle">
+                                    <thead class="table-primary">
                                         <tr>
-                                            @foreach (DataColumn col in quizzes.Columns)
-                                            {
-                                                <th>@col.ColumnName</th>
-                                            }
+                                            <th scope="col">Sr. No.</th>
+                                            <th scope="col">Quiz Name</th>
+                                            <th scope="col">User Name</th>
+                                            <th scope="col">Total Questions</th>
+                                            <th scope="col">Quiz Date</th>
                                         </tr>
                                     </thead>
                                     <tbody>
+                                        @{
+                                            int counter = 1;
+                                        }
                                         @foreach (DataRow row in quizzes.Rows)
                                         {
                                             <tr>
-                                                @foreach (var item in row.ItemArray)
-                                                {
-                                                    <td>@item</td>
-                                                }
+                                                <td>@counter</td>
+                                                <td>@row["QuizName"]</td>
+                                                <td>@row["UserName"]</td>
+                                                <td>@row["TotalQuestions"]</td>
+                                                <td>@Convert.ToDateTime(row["QuizDate"]).ToString("dd MMM yyyy")</td>
                                             </tr>
+                                            counter++;
                                         }
                                     </tbody>
                                 </table>
@@ -178,27 +184,32 @@
                         <div class="col-sm">
                             @if (questions != null && questions.Rows.Count > 0)
                             {
-                                <table class="table table-striped">
-                                    <thead>
+                                <table class="table table-striped table-bordered table-responsive text-center align-middle">
+                                    <thead class="table-success">
                                         <tr>
-                                            @foreach (DataColumn col in questions.Columns)
-                                            {
-                                                <th>@col.ColumnName</th>
-                                            }
+                                            <th scope="col">Sr. No.</th>
+                                            <th scope="col">QuestionText</th>
+                                            <th scope="col">User Name</th>
+                                            <th scope="col">Added On</th>
                                         </tr>
                                     </thead>
                                     <tbody>
+                                        @{
+                                            int counter = 1;
+                                        }
                                         @foreach (DataRow row in questions.Rows)
                                         {
                                             <tr>
-                                                @foreach (var item in row.ItemArray)
-                                                {
-                                                    <td>@item</td>
-                                                }
+                                                <td>@counter</td>
+                                                <td>@row["QuestionText"]</td>
+                                                <td>@row["UserName"]</td>
+                                                <td>@Convert.ToDateTime(row["Created"]).ToString("dd MMM yyyy")</td>
                                             </tr>
+                                            counter++;
                                         }
                                     </tbody>
                                 </table>
+
                             }
                             else
                             {
