--- a/My_Project_dotNET/Views/Shared/_Layout.cshtml
+++ b/My_Project_dotNET/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VB QuizMaster</title>
+    <link href="~/assets/img/logo.png" style="mix-blend-mode:multiply" rel="icon"/>
     <!-- Google Fonts -->
     <link href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
