--- a/My_Project_dotNET/Views/User/UserList.cshtml
+++ b/My_Project_dotNET/Views/User/UserList.cshtml
@@ -70,6 +70,7 @@
                 <tr>
                     <th>UserName</th>
                     <th>Email</th>
+                    <th>Password</th>
                     <th>IsActive</th>
                     <th>IsAdmin</th>
                     <th>Created</th>
@@ -82,6 +83,7 @@
                     <tr>
                         <td>@row["UserName"]</td>
                         <td>@row["Email"]</td>
+                        <td>@row["Password"]</td>
                         <td>@row["IsActive"]</td>
                         <td>@row["IsAdmin"]</td>
                         <td>@row["Created"]</td>
