--- a/My_Project_dotNET/Views/QuestionLevel/AddQuestionLevel.cshtml
+++ b/My_Project_dotNET/Views/QuestionLevel/AddQuestionLevel.cshtml
@@ -67,7 +67,7 @@
                 <input type="hidden" asp-for="QuestionLevelID" />
             }
             <div class="row mb-3">
-                <label asp-for="QuestionLevel" for="inputEmail3" class="col-sm-3 col-form-label"><span class="text-danger">*</span>Question Level</label>
+                <label asp-for="QuestionLevel" class="col-sm-3 col-form-label"><span class="text-danger">*</span>Question Level</label>
                 <div class="col-sm">
                     <input asp-for="QuestionLevel" type="text" class="form-control" id="inputText" placeholder="Enter Question level">
                     <span asp-validation-for="QuestionLevel" class="text-danger"></span>
