--- a/My_Project_dotNET/Views/Shared/_Layout.cshtml
+++ b/My_Project_dotNET/Views/Shared/_Layout.cshtml
@@ -90,16 +90,16 @@
                         </li>
                         <li><hr class="dropdown-divider"></li>
                         <li>
-                            <a class="dropdown-item d-flex align-items-center" href="/Profile">
+                            <a class="dropdown-item d-flex align-items-center" asp-controller="User" asp-action="Profile">
                                 <i class="bi bi-person"></i>
                                 <span>My Profile</span>
                             </a>
                         </li>
                         <li><hr class="dropdown-divider"></li>
                         <li>
-                            <a class="dropdown-item d-flex align-items-center" href="/Settings">
-                                <i class="bi bi-gear"></i>
-                                <span>Account Settings</span>
+                            <a class="dropdown-item d-flex align-items-center" asp-controller="User" asp-action="ChangePassword">
+                                <i class="bi bi-pass"></i>
+                                <span>Change Password</span>
                             </a>
                         </li>
                         <li><hr class="dropdown-divider"></li>
